--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/sergeyamator/itvdn-landing.git"
   },
-  "author": "Sergey Rubets",
+  "author": "Eugene Zaharchenko",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sergeyamator/itvdn-landing/issues"
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/sergeyamator/itvdn-landing#readme",
   "devDependencies": {
     "browser-sync": "^2.24.7",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
@@ -31,5 +31,6 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "normalize.scss": "^0.1.0"
-  }
+  },
+  "optionalDependencies": {}
 }
